# dwm-ma-plugin

./: .gitmodules  CMakeLists.txt  README.md  plugin.cpp
array2sh-presets/: MA_CONFIG_12_POINTS_SQRT_2.json  MA_CONFIG_24_POINTS_SQRT_10.json  MA_CONFIG_24_POINTS_SQRT_11.json  MA_CONFIG_24_POINTS_SQRT_13.json  MA_CONFIG_24_POINTS_SQRT_5.json  MA_CONFIG_24_POINTS_SQRT_6.json  MA_CONFIG_30_POINTS_SQRT_9.json  MA_CONFIG_48_POINTS_SQRT_14.json  MA_CONFIG_6_POINTS_SQRT_1.json  MA_CONFIG_8_POINTS_SQRT_3.json
